gap issues

--- a/src/app/main/employees/employees-home/employees-home.component.scss
+++ b/src/app/main/employees/employees-home/employees-home.component.scss
@@ -46,17 +46,11 @@
     border-top: 0;
     border-bottom: 0;
     border-right: 0;
-    border-left: -1px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    padding-right: 5px;
+    border-width: 4px;
+    padding-left: 20px;
+    padding-bottom: 3px;
     margin-left: 30px;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    row-gap: 20px;
+    margin-top: 5px;
   }
 }
 
